# reallive

./: .gitignore  .gitmodules  AGENTS.md  README.md
.claude/: settings.local.json  settings.local.json.tmp.5033.1770988907180
android/: ._.gradle  README.md  UI_DESIGN.md  settings.gradle.kts
android/.ffmpeg-build/arm64-v8a/: config.h  src
android/.ffmpeg-build/arm64-v8a/doc/: config.texi
android/.ffmpeg-build/arm64-v8a/ffbuild/: config.fate  config.mak  config.sh
android/.ffmpeg-build/arm64-v8a/libavcodec/: aac_ac3_parser.d  aac_parser.d  aacps_common.d  aacps_float.d  aacsbr.d  ac3_parser.d  adts_header.d  adts_parser.d  allcodecs.d  aom_film_grain.d  atsc_a53.d  avcodec.d  avdct.d  bitstream.d  bitstream_filters.d  bsf.d  cabac.d  cbrt_data.d  codec_desc.d  codec_par.d  decode.d  dirac.d  dovi_rpu.d  dovi_rpudec.d  dv_profile.d  dynamic_hdr_vivid.d  encode.d  error_resilience.d  faandct.d  faanidct.d  fdctdsp.d  float_scalarproduct.d  get_buffer.d  h2645_parse.d  h2645_sei.d  h2645_vui.d  h264_cabac.d  h264_cavlc.d  h264_direct.d  h264_loopfilter.d  (+52 more)
android/.ffmpeg-build/arm64-v8a/libavfilter/: allfilters.d  audio.d  avfilter.d  avfiltergraph.d  buffersink.d  buffersrc.d  ccfifo.d  colorspace.d  drawutils.d  formats.d  framepool.d  framequeue.d  graphdump.d  graphparser.d  libavfilter.pc  libavfilter.so.11  pthread.d  version.d  video.d
android/.ffmpeg-build/arm64-v8a/libavformat/: allformats.d  avformat.d  avio.d  aviobuf.d  demux.d  demux_utils.d  dovi_isom.d  dump.d  dv.d  dvdclut.d  file.d  flac_picture.d  flvdec.d  format.d  http.d  httpauth.d  iamf.d  iamf_parse.d  iamf_reader.d  id3v1.d  id3v2.d  isom.d  isom_tags.d  libavformat.so.62  matroska.d  matroskadec.d  metadata.d  mov.d  mov_chan.d  mov_esds.d  mpegts.d  mux.d  mux_utils.d  network.d  oggparsevorbis.d  options.d  os_support.d  qtpalette.d  replaygain.d  riff.d  (+8 more)
android/.ffmpeg-build/arm64-v8a/libavutil/: adler32.d  aes.d  aes_ctr.d  ambient_viewing_environment.d  audio_fifo.d  base64.d  blowfish.d  buffer.d  camellia.d  cast5.d  channel_layout.d  container_fifo.d  cpu.d  crc.d  des.d  detection_bbox.d  dict.d  downmix_info.d  encryption_info.d  eval.d  executor.d  file_open.d  film_grain_params.d  fixed_dsp.d  float_scalarproduct.d  frame.d  hash.d  hdr_dynamic_metadata.d  hdr_dynamic_vivid_metadata.d  hwcontext.d  iamf.d  imgutils.d  intmath.d  lfg.d  libavutil.pc  libavutil.so.60  log.d  lzo.d  mastering_display_metadata.d  mathematics.d  (+32 more)
android/.ffmpeg-build/arm64-v8a/libswresample/: audioconvert.d  dither.d  libswresample.pc  libswresample.so.6  options.d  rematrix.d  resample.d  resample_dsp.d  swresample.d  swresample_frame.d  version.d
android/.ffmpeg-build/arm64-v8a/libswscale/: alphablend.d  cms.d  csputils.d  format.d  gamma.d  graph.d  hscale.d  hscale_fast_bilinear.d  input.d  libswscale.pc  libswscale.so.9  lut3d.d  options.d  output.d  rgb2rgb.d  slice.d  swscale.d  swscale_unscaled.d  utils.d  version.d  vscale.d  yuv2rgb.d
android/.ffmpeg-build/armeabi-v7a/: Makefile  config.h  config_components.h  src
android/.ffmpeg-build/armeabi-v7a/doc/: config.texi
android/.ffmpeg-build/armeabi-v7a/ffbuild/: config.fate  config.mak  config.sh
android/.ffmpeg-build/armeabi-v7a/libavcodec/: aac_ac3_parser.d  aac_parser.d  aacps_common.d  aacps_float.d  (+85 more)
android/app/: build.gradle.kts
android/player-native/: ARCHITECTURE.md  build.gradle.kts
android/player-native/src/main/cpp/: CMakeLists.txt
android/player-native/src/main/cpp/jni/: NativePlayerJni.cpp
android/player-native/src/main/cpp/player/core/: PlayerController.cpp  PlayerController.h
android/player-native/src/main/cpp/player/impl/: FfmpegPlayer.cpp  FfmpegPlayer.h
android/player-native/src/main/cpp/player/interface/: IPlayer.h  PlayerTypes.h
android/scripts/: build_ffmpeg_android.sh
docs/: architecture.md  manual.md  system-understanding.md  test-plan.md  web-redesign-mapping.md
puller/: CMakeLists.txt
puller/config/: puller.json
puller/include/: IDecoder.h  IRenderer.h  IStorage.h  IStreamReceiver.h
puller/include/core/: Config.h  PullPipeline.h
puller/include/platform/: IDecoder.h  IRenderer.h  IStorage.h  IStreamReceiver.h
puller/src/: main.cpp
puller/src/core/: Config.cpp  PullPipeline.cpp
puller/src/platform/rpi5/: FFmpegReceiver.cpp  FFmpegReceiver.h  Mp4Storage.cpp  Mp4Storage.h  V4L2Decoder.cpp  V4L2Decoder.h
puller/tests/: CMakeLists.txt  test_config.cpp  test_mock_interfaces.cpp  test_storage.cpp
pusher/: CMakeLists.txt
pusher/config/: pusher.json
pusher/include/: IAudioCapture.h  ICameraCapture.h  IEncoder.h  IStreamer.h
pusher/include/core/: Config.h  ControlServer.h  LocalRecorder.h  MqttRuntimeClient.h  Pipeline.h  SeiTimestamp.h  TextOverlay.h
pusher/include/platform/: IAudioCapture.h  ICameraCapture.h  IEncoder.h  IStreamer.h
pusher/src/: main.cpp
pusher/src/core/: Config.cpp  ControlServer.cpp  LocalRecorder.cpp  MqttRuntimeClient.cpp  Pipeline.cpp
pusher/src/platform/rpi5/: AlsaCapture.cpp  AlsaCapture.h  AvcodecEncoder.cpp  AvcodecEncoder.h  LibcameraCapture.cpp  LibcameraCapture.h  RtmpStreamer.cpp  RtmpStreamer.h  V4L2Encoder.cpp  V4L2Encoder.h
pusher/tests/: CMakeLists.txt  test_config.cpp  test_mock_interfaces.cpp
server/: package-lock.json  package.json  srs.conf
server/config/: server.json
server/data/: reallive.db-shm  reallive.db-wal
server/src/: app.js  config.js  server.js
server/src/middleware/: auth.js
server/src/models/: alert.js  camera.js  db.js  rule.js  session.js  user-settings.js  user.js
server/src/routes/: alerts.js  auth.js  cameras.js  dashboard.js  rules.js  sessions.js  settings.js  storage.js
server/src/services/: edgeReplayService.js  historyService.js  liveDemandService.js  mqttControlService.js  seiMonitor.js  srsSync.js
server/src/signaling/: index.js
server/test/: auth.test.js  cameras.test.js  setup.js
server/tests/: test_api.sh  test_websocket.js
server/web/: index.html  package-lock.json  package.json  vite.config.js
server/web/scripts/: check-platform-deps.mjs
server/web/src/: App.vue  style.css
(+436 files in other folders)
